<resources>
    <string name="app_name">Прогноз погоды</string>
    <string name="city_name">"Москва"</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Ошибка</string>
    <string name="reload">Reload</string>
    <string name="coordinates">lt/ln: 55.755826, 37.617299900000035</string>
    <string name="temperature">+15</string>
    <string name="feels_like">-23</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">\"Попробовать еще раз\"</string>
    <string name="data_loading">\"Выполняется загрузка данных\"</string>
    <string name="data_error">\"Ошибка загрузки данных\"</string>
</resources>